@@ -132,10 +132,23 @@ basep_widget_realize (GtkWidget *w)
 	g_return_if_fail (klass);
 	if (klass->realize != NULL)
 		klass->realize (w);
+}
 
-	/* make sure we reset our position, so that if the wm misplaces us
-	 * we jump back */
-	gtk_widget_queue_resize (w);
+static gboolean
+basep_widget_configure_event (GtkWidget *w, GdkEventConfigure *event)
+{
+	g_return_if_fail (IS_BASEP_WIDGET (w));
+
+	if (event->x != w->allocation.x ||
+	    event->y != w->allocation.y ||
+	    event->width != w->allocation.width ||
+	    event->height != w->allocation.height)
+		gtk_widget_queue_resize (w);
+
+	if (GTK_WIDGET_CLASS (basep_widget_parent_class)->configure_event != NULL)
+		return GTK_WIDGET_CLASS (basep_widget_parent_class)->configure_event (w, event);
+	else
+		return FALSE;
 }
 
 static void
@@ -341,6 +354,7 @@ basep_widget_class_init (BasePWidgetClass *klass)
 	widget_class->size_request = basep_widget_size_request;
 	widget_class->size_allocate = basep_widget_size_allocate;
 	widget_class->realize = basep_widget_realize;
+	widget_class->configure_event = basep_widget_configure_event;
 	widget_class->enter_notify_event = basep_enter_notify;
 	widget_class->leave_notify_event = basep_leave_notify;
 	widget_class->style_set = basep_style_set;
