@@ -1,3 +1,9 @@
+Tue Mar 06 22:33:01 2001  George Lebl <jirka@5z.com>
+
+	* basep-widget.c, foobar-widget.c: when we get a configure event
+	  and it ain't what we like we go back to where we belong.  Prevents
+	  things from moving us.
+
 Tue Mar 06 18:56:43 2001  George Lebl <jirka@5z.com>
 
 	* launcher.c: correctly translate "%c" and %c in the kde command line
